--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,12 @@ padding-bottom: 50px;
 color: #000000 !important;
 }    
 
+/*.featured-product .card-background {
+    background-image: url(../img/Delta-8-Button.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}*/
+
 
 
 
