--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,14 @@
 footer{
     color:var(--footer-font-color);
-    background:var(--footer-background-color);
+    /*background:var(--footer-background-color);*/
     position:relative;
     z-index:1;
     padding-top:0;
-    margin-top:0
+    margin-top:0;
+    background: linear-gradient(rgba(13, 13, 13, 0.9), rgba(13, 13, 13, 0.9)), url("../img/fondo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 @media print,screen and (min-width:64em){
     footer{
@@ -77,7 +81,7 @@ footer .footer__columns-bottom{
     align-items:center;
     justify-content:space-between;
     text-align:center;
-    background-color:var(--color-accent-3);
+    background-color:#ffc31a;
     padding:1rem 1rem 0 1rem
 }
 @media print,screen and (min-width:40em){
@@ -121,19 +125,19 @@ footer .footer__form .form__wrapper{
     position:relative
 }
 footer .footer__form .form__wrapper .form__title{
-    max-width:50%;
-    width:30rem;
+    max-width:100%;
+    width:90rem;
     margin:0 0 1rem 0;
     color:var(--color-white)
 }
 @media print,screen and (min-width:40em){
     footer .footer__form .form__wrapper .form__title{
-        margin:0 0 3rem 3rem
+        margin:0 0 1rem 3rem
     }
 }
 @media print,screen and (min-width:64em){
     footer .footer__form .form__wrapper .form__title{
-        font-size:4.0625rem;
+        font-size:3.0625rem;
         line-height:4.0625rem
     }
 }
@@ -269,7 +273,7 @@ footer .footer__social-links{
     }
 }
 footer .footer__social-links a{
-    background:#cf4eff;
+    background:#ffc31a;
     display:flex;
     align-items:center;
     justify-content:center;
@@ -299,7 +303,7 @@ footer .footer__social-links svg{
     height:1.9rem
 }
 footer .footer__social-links svg path{
-    fill:var(--color-white)
+    fill:#212121;
 }
 footer .footer__links-small{
     display:flex;
@@ -340,7 +344,7 @@ footer .footer__links-small .footer-secondary-links li::after{
     content:"";
     width:10px;
     height:21px;
-    background-image:url("data:image/svg+xml,%3Csvg width='11' height='21' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.832.052 3.405 7.561l2.294.192-5.432 8.503 2.698.07-2.062 4.458c-.063.162.137.293.25.164l6.49-7.374-2.752-.232 5.376-7.792-2.805-.663L9.049.172c.047-.139-.132-.237-.217-.12' fill='%23FFF' fill-rule='evenodd'/%3E%3C/svg%3E");
+    background-image:url("data:image/svg+xml,%3Csvg width='11' height='21' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.832.052 3.405 7.561l2.294.192-5.432 8.503 2.698.07-2.062 4.458c-.063.162.137.293.25.164l6.49-7.374-2.752-.232 5.376-7.792-2.805-.663L9.049.172c.047-.139-.132-.237-.217-.12' fill='%212121' fill-rule='evenodd'/%3E%3C/svg%3E");
     background-repeat:no-repeat;
     background-position:center
 }
@@ -356,7 +360,7 @@ footer .footer__links-small .footer-secondary-links .trigger,footer .footer__lin
     opacity:1;
     font-size:.8125rem;
     letter-spacing:1px;
-    color:var(--color-white);
+    color:#212121;
     padding:.1rem 0;
     margin:0 .3rem;
     display:inline-block;
@@ -378,7 +382,7 @@ footer .footer__links-small .copyright{
     padding:.7rem 1rem .7rem 1rem;
     font-size:.8125rem;
     letter-spacing:1px;
-    color:var(--color-white);
+    color:#212121;
     padding:.1rem .1rem .1rem .3rem
 }
 @media print,screen and (max-width:63.99875em){
@@ -422,4 +426,13 @@ footer .small-footer-text{
     .template-product footer{
         margin-bottom:5rem
     }
+}
+
+.form__p{
+    font-size: 2.0625rem;
+    margin: 0 0 3rem 3rem;
+}
+
+.input-footer::placeholder{
+color: #212121;
 }
