--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 font-weight: 800;
 font-size: 16px;
 margin-top: 50px;
+color: #212121 !important;
 }
 .div-featured{
 padding-top:10px;
@@ -137,5 +138,9 @@ section.mfr-core__image-section .image-wrapper.circle:after {
     width: 100%;
     height: 100%;
     background-size: contain;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 723 723'%3E%3Cpath d='M361.5 722C560.599 722 722 560.599 722 361.5S560.599 1 361.5 1 1 162.401 1 361.5 162.401 722 361.5 722Z' stroke='%red' stroke-width='2' fill='none' fill-rule='evenodd' stroke-dasharray='10'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 723 723'%3E%3Cpath d='M361.5 722C560.599 722 722 560.599 722 361.5S560.599 1 361.5 1 1 162.401 1 361.5 162.401 722 361.5 722Z' stroke='%23450073' stroke-width='2' fill='none' fill-rule='evenodd' stroke-dasharray='10'/%3E%3C/svg%3E");
+}
+
+.product-card .product-card-inner .product-card__add-to-cart-plus {
+    background: #212121;
 }
